# Jackal-Wiki

./: .bash_aliases  README.md  remote-jackal.sh
src/jackal_private/ucs11_jackal/: CMakeLists.txt  README.md  package.xml
src/jackal_private/ucs11_jackal/config/: robot_localization.yaml
src/jackal_private/ucs11_jackal/launch/: garmin_gps.launch  ouster.launch  robot_rviz.launch  um7.launch
src/jackal_private/ucs11_jackal/meshes/: jackal_top.STL  jackal_top_arm.STL
src/jackal_private/ucs11_jackal/plot/: cone_controller_debug.xml  safety_metric_and_control_signal.xml
src/jackal_private/ucs11_jackal/rqt/: safety_metric_and_control_signal.xml
src/jackal_private/ucs11_jackal/rviz/: ouster_lidar_3d.rviz  ref_gvn_dummy.rviz  ref_gvn_ros.rviz
src/jackal_private/ucs11_jackal/urdf/: jackal_description.urdf.xacro
src/jackal_public/jackal_viz/: CMakeLists.txt
src/jackal_public/jackal_viz/plot/: jackal_motor_ctrl.xml
src/jackal_public/jackal_viz/rviz/: erl_view_robot_with_lidar.rviz  robot.rviz
src/notes/: zhl_aliases
